# hungary-data-jobs-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: searches.json
deploy/: container-entrypoint.sh  crontab.txt  run-daily.sh  run.sh
docs/: daily.json  daily.txt  index.html
src/profession_monitor/: __init__.py  classify.py  cli.py  collector.py  delivery.py  models.py  parse.py  publish.py  report.py  storage.py
tests/: test_classify.py  test_collector.py  test_delivery.py  test_parse.py  test_report.py  test_schedule.py  test_storage.py
tests/fixtures/: search_page.html
