[project]
name = "profession-monitor"
version = "0.1.0"
description = "Daily Profession.hu data jobs market monitor"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
profession-monitor = "profession_monitor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
